--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/wamp64/www/investment_equation/riskassessment.html"><i class="far fa-comment-dots"></i> Risk Assessment</a>
+            <a class="nav-link" href="riskassessment.html"><i class="far fa-comment-dots"></i> Risk Assessment</a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -83,7 +83,7 @@
       <div class="col-lg-6 offset-lg-1 col-sm-13 header-title-section">
         <div class="custom-buttons">
           <a href="#calculator" class="custom-button">Rafaah Investment Calculator</a>
-          <a href="file:///C:/wamp64/www/investment_equation/riskassessment.html" class="custom-button">Rafaah Risk Assessment</a>
+          <a href="riskassessment.html" class="custom-button">Rafaah Risk Assessment</a>
         </div>
         <h1 class="header-title">Accurate Tracking for Your Investments!</h1>
         <p class="header-title-text">Simplify Your Financial Journey with Cutting-Edge Tools Designed to Deliver Accurate Investment Tracking, 
